<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:icon="@drawable/ic_share"
        android:showAsAction="always"
        android:title="@string/share">
        <menu>
            <item
                android:id="@+id/share_facebook"
                android:showAsAction="never"
                android:icon="@drawable/facebook"
                android:title="@string/facebook"/>
            <item
                android:id="@+id/share_twitter"
                android:showAsAction="never"
                android:icon="@drawable/twitter"
                android:title="@string/twitter"/>
        </menu>
    </item>
    <item
        android:id="@+id/add"
        android:icon="@drawable/ic_add"
        android:showAsAction="always"
        android:title="@string/add">
    </item>    
    
    <item
        android:id="@+id/action_load"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:checkable="true"
        android:title="@string/tag_onload"/>
    <item
        android:id="@+id/action_terms"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/terms"/>
    <item
        android:id="@+id/action_contact"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/contact"/>
    <item
        android:id="@+id/action_about"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/about"/>
    <item
        android:id="@+id/action_logout"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/log_out"/>

</menu>