<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" >

      
    <item
        android:id="@+id/action_load"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:checkable="true"
        android:title="@string/tag_onload"/>
    <item
        android:id="@+id/action_terms"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/terms"/>
    <item
        android:id="@+id/action_contact"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/contact"/>
    <item
        android:id="@+id/action_about"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/about"/>
    <item
        android:id="@+id/action_logout"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/log_out"/>

</menu>