<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin" >

    <Button
        android:id="@+id/getStartedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:background="@drawable/button_signup"
        android:text="@string/get_started"
        android:textSize="18sp"
        android:textStyle="bold" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/getStartedButton"
        android:layout_alignParentTop="true" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingTop="@dimen/activity_vertical_margin" >

            <EditText
                android:id="@+id/usernameEditTextSignup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:digits="1234567890qwertyuiopasdfghjklzxcvbnmQWERTYUIOPASDFGHJKLZXCVBNM.-_"
                android:hint="@string/username"
                android:imeOptions="actionNext"
                android:inputType="textPersonName|textNoSuggestions"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/emailEditTextSignup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:hint="@string/email"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress|textNoSuggestions"
                android:textSize="18sp" >
            </EditText>

            <EditText
                android:id="@+id/passwordEditTextSignup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:hint="@string/password"
                android:imeOptions="actionNext"
                android:inputType="textPassword|textNoSuggestions"
                android:textSize="18sp" >
            </EditText>

            <EditText
                android:id="@+id/repeatPasswordEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:hint="@string/repeat_password"
                android:imeOptions="actionNext"
                android:inputType="textPassword|textNoSuggestions"
                android:textSize="18sp" >
            </EditText>

            <EditText
                android:id="@+id/fnameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:digits="1234567890qwertyuiopasdfghjklzxcvbnmQWERTYUIOPASDFGHJKLZXCVBNM "
                android:hint="@string/first_name"
                android:imeOptions="actionNext"
                android:inputType="textNoSuggestions"
                android:textSize="18sp" >
            </EditText>

            <EditText
                android:id="@+id/lnameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:digits="1234567890qwertyuiopasdfghjklzxcvbnmQWERTYUIOPASDFGHJKLZXCVBNM "
                android:hint="@string/last_name"
                android:imeOptions="actionNext"
                android:inputType="textNoSuggestions"
                android:textSize="18sp" >
            </EditText>

            <EditText
                android:id="@+id/cityEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:hint="@string/city"
                android:imeOptions="actionNext"
                android:inputType="textNoSuggestions"
                android:textSize="18sp" >
            </EditText>

            <EditText
                android:id="@+id/stateEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/state"
                android:imeOptions="actionNext"
                android:inputType="textNoSuggestions"
                android:textSize="18sp" >
            </EditText>

            <requestFocus />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>