<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:paddingTop="@dimen/activity_vertical_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.facebook.widget.LoginButton
                android:id="@+id/authButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <com.moysof.mydrivingblows.RegularRobotoText
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="24dp"
                android:layout_marginTop="24dp"
                android:text="@string/login_variants"
                android:textColor="@color/header"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/usernameEditTextLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/green"
                android:layout_marginBottom="16dp"
                android:digits="1234567890qwertyuiopasdfghjklzxcvbnmQWERTYUIOPASDFGHJKLZXCVBNM.-_@"
                android:ems="10"
                android:hint="@string/username_or_email"
                android:imeOptions="actionNext"
                android:inputType="textPersonName|textNoSuggestions"
                android:textColor="#fff"
                android:textColorHint="#bbb"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/passwordEditTextLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:digits="1234567890qwertyuiopasdfghjklzxcvbnmQWERTYUIOPASDFGHJKLZXCVBNM "
                android:hint="@string/password"
                android:backgroundTint="@color/green"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:textColor="#fff"
                android:textColorHint="#bbb"
                android:textSize="16sp"></EditText>

        </LinearLayout>
    </ScrollView>

    <com.moysof.mydrivingblows.MediumRobotoButton
        android:id="@+id/joinButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="16dp"
        android:layout_gravity="bottom"
        android:background="@drawable/button_login"
        android:text="@string/join"
        android:textSize="14sp" />

</FrameLayout>